--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -180,6 +180,14 @@ $navbar-inverse-brand-color: #000;
   display: inline-block;
 }
 
+.checkout {
+  margin-top: 0.6%;
+  box-shadow: 3px 3px 3px #888;
+  display: inline-block;
+}
+
+
+
 a.add-loan-text:hover {
 	color: #000;
 	text-decoration: none;
@@ -278,3 +286,7 @@ a.add-loan-text:hover {
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
 @import url(http://fonts.googleapis.com/css?family=Parisienne);
 @import url(http://fonts.googleapis.com/css?family=Aclonica);
+
+.btn-checkout {
+  display: none;
+}
