button should work now

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -186,7 +186,9 @@ $navbar-inverse-brand-color: #000;
   display: inline-block;
 }
 
-
+.btn-checkout {
+  display: none;
+}
 
 a.add-loan-text:hover {
 	color: #000;
