fix size of box and image

--- a/app/views/loans/_loan_box.erb
+++ b/app/views/loans/_loan_box.erb
@@ -1,4 +1,4 @@
-<div class="loan-box">
+<div class="loan-box col-md-3">
   <div class="loan-box-description">
     <%= image_tag loan.image.url(:small), class: "loan-image" %><br/>
     <div>
