--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -123,14 +123,9 @@ $navbar-inverse-brand-color: #000;
 }
 
 .loan-box {
-	margin: 10px;
-	border: 4px solid #024;
-	padding: 10px;
-  width:  340px;
-  height: 340px;
-	background-color: #E8F3FF;
-	box-shadow: 10px 10px 5px #888;
-  display :inline-block;
+  width: 225px;
+  height: 435px;
+  padding-top: 15px;
 }
 
 .loan-box-description {
