--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -130,11 +130,12 @@ $navbar-inverse-brand-color: #000;
 
 .loan-box-description {
   position: relative;
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.1);
-	border: 2px solid #024;
-	padding: 1%;
+  border: 1px solid #ABB5BE;
+  margin-left: -14px;
+  margin-top: -14px;
 }
 
 .loan-image {
