Moved title of loan down

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -145,10 +145,10 @@ $navbar-inverse-brand-color: #000;
 
 .loan-title {
   position: absolute;
-  margin-left: 1%;
-  top: 5%;
-  font-size: 1.250em;
-  background: rgb(255, 255, 255); /* fallback color */
+  margin-left: 8%;
+  top: 40%;
+  font-size: 1.25em;
+  background: white;
   background: rgba(255, 255, 255, 0.5);
 }
 
