--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -146,10 +146,10 @@ $navbar-inverse-brand-color: #000;
 .loan-title {
   position: absolute;
   margin-left: 8%;
-  top: 40%;
-  font-size: 1.25em;
+  top: 33%;
+  font-size: 12px;
   background: white;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.5);;
 }
 
 .loan-description {
