moved loan description

--- a/app/views/loans/_loan_box.erb
+++ b/app/views/loans/_loan_box.erb
@@ -8,7 +8,7 @@
         <% end %>
       </span>
       <span class="loan-description">
-        <%= loan.description %>
+        <%= truncate(loan.description, :length => 400) %>
       </span>
     </div>
 
