--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -154,11 +154,12 @@ $navbar-inverse-brand-color: #000;
 
 .loan-description {
   position: absolute;
-  top: 12.5%;
-  margin-left: 1%;
-  margin-right: 60%;
+  top: 42.5%;
+  margin-left: 3%;
+  margin-right: 3%;
   font-size: 0.750em;
-  background: rgb(255, 255, 255); /* fallback color */
+  bottom: 19%;
+  background: white;
   background: rgba(255, 255, 255, 0.5);
 }
 
