--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -129,7 +129,6 @@ $navbar-inverse-brand-color: #000;
 }
 
 .loan-box-description {
-  position: relative;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.1);
@@ -144,17 +143,12 @@ $navbar-inverse-brand-color: #000;
 }
 
 .loan-title {
-  position: absolute;
-  margin-left: 8%;
-  top: 33%;
+  text-align: -webkit-center;
   font-size: 12px;
-  background: white;
-  background: rgba(255, 255, 255, 0.5);;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .loan-description {
-  position: absolute;
-  top: 42.5%;
   margin-left: 3%;
   margin-right: 3%;
   font-size: 0.750em;
@@ -164,7 +158,7 @@ $navbar-inverse-brand-color: #000;
 }
 
 .loan-box-price {
-  margin-top: 79%;
+  margin-top: 10%;
   text-align: center;
 }
 
