--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -155,6 +155,7 @@ $navbar-inverse-brand-color: #000;
   bottom: 19%;
   background: white;
   background: rgba(255, 255, 255, 0.5);
+  height: 163px;
 }
 
 .loan-box-price {
@@ -172,7 +173,6 @@ $navbar-inverse-brand-color: #000;
 
 .add-loan {
 	margin-top: 0.6%;
-	box-shadow: 3px 3px 3px #888;
   display: inline-block;
 }
 
