--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -37,7 +37,7 @@
       <% end %>
     </table>
     <% if @contributions.any? %>
-      <div id="checkout-button"><%= link_to "Checkout", new_order_path, class: 'btn btn-success center' %></div>
+      <div id="checkout-button"><%= link_to "Checkout", review_contributions_path, class: 'btn btn-success center' %></div>
     <% end %>
   </div>
 </div>
