Changed loan price color and size

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -165,10 +165,10 @@ $navbar-inverse-brand-color: #000;
 
 .loan-price {
   margin-right: 10%;
-	color: red;
-	font-size: 19px;
-	font-weight: bold;
-	text-align: center;
+  color: rgb(78, 87, 79);
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .add-loan {
