--- a/app/views/layouts/_borrower_navbar.html.erb
+++ b/app/views/layouts/_borrower_navbar.html.erb
@@ -10,14 +10,13 @@
 	        <span class="icon-bar"></span>
 	      </button>
 	      <a id="mini-keevahh-logo" class="navbar-brand" href="/borrower"><img src="/assets/kevah.png" class="brand" height="40px" width="40px" /></a>
-	      <a class="navbar-brand brand-text" href="/borrower">Keevahh</a>
+	      <a class="navbar-brand brand-text" href="/">Keevahh</a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li><%= link_to "My Loans", borrower_loans_path %></li>
-	        <li><%= link_to "Categories", borrower_categories_path %></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
 	        <% if current_user %>
