--- a/app/views/borrower/loans/edit.html.erb
+++ b/app/views/borrower/loans/edit.html.erb
@@ -12,7 +12,7 @@
     <%= f.label      :description %><br/>
     <%= f.text_area  :description %><br/>
 
-    <%= f.label             :loan_category %><br/>
+    <%= f.label             :category %><br/>
     <%= f.collection_select :categories, Category.all, :id, :name %><br/>
 
     <%= f.label       :repayments_begin %><br/>
@@ -26,7 +26,7 @@
 
     <%= f.label      :amount %><br/>
     <%= f.text_field :amount, value: @loan.unit_price_decimal %><br/>
-    
+
     <%= f.label :image %>
     <%= f.file_field :image %>
     <div class="form-actions">
