--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="page-border">
   <div class="container" style="width: 100%">
-    <%= link_to "<< Back to Menu", categories_path %>
+    <%= link_to "<< Back to Menu", root_path %>
     <span id="my-cart-title"><h2>My Cart</h2></span>
     <table class="table table-striped">
       <tr>
