--- a/app/views/borrower/loans/index.html.erb
+++ b/app/views/borrower/loans/index.html.erb
@@ -22,7 +22,7 @@
           <td><%= loan.unit_price_dollars %></td>
           <td>
             <%= link_to 'Edit', edit_borrower_loan_path(loan), :class => 'btn btn-primary' %>
-            <%= link_to 'Delete', borrower_loan_path(loan),
+            <%= link_to 'Cancel', borrower_loan_path(loan),
               :method => :delete,
               :data => { :confirm => 'Are you sure?' },
               :class => 'btn btn-mini btn-danger' %>
