--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -13,7 +13,13 @@
         <% @contributions.each do |contribution| %>
           <tr>
             <td><%= contribution.loan.title %></td>
-            <td><%= number_to_currency(contribution.amount.to_i/100) %></td>
+            <td>
+              <%= form_for :contribution, url: contribution_path(contribution), method: :patch do |f| %>
+                <%= f.hidden_field :id, value: contribution.id %>
+                <%= f.select :amount, (25..contribution.loan.amount/100).step(5).map{ |n| n }, selected: contribution.amount %><br/>
+                <%= f.submit "Edit Amount", class: "btn" %>
+              <% end %>
+            </td>
             <td><%= contribution.loan.amount_in_dollars %></td>
             <td>
               <%= form_for(:cart, url: cart_path, method: :delete) do |f| %>
