--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,6 +14,9 @@
 	    </div>
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li><%= link_to "My Contributions", contributions_path %></li>
+				</ul>
 	      <ul class="nav navbar-nav navbar-right">
 				 <li class="active">
             <%= link_to cart_path do %>
