all over the place get progress bar to work stuff with seed to have contributions assigned to loans validate contribtuions so that you cannot make a conrtibution if it exceeds to amount left over in the loan

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -16,7 +16,7 @@
             <td>
               <%= form_for :contribution, url: contribution_path(contribution), method: :patch do |f| %>
                 <%= f.hidden_field :id, value: contribution.id %>
-                <%= f.select :amount, (25..contribution.loan.amount/100).step(5).map{ |n| n }, selected: contribution.amount %><br/>
+                <%= f.select :amount, (25..contribution.loan.amount/100).step(5).map{ |n| n }, selected: contribution.amount.to_i/100 %><br/>
                 <%= f.submit "Edit Amount", class: "btn" %>
               <% end %>
             </td>
