--- a/app/views/contributions/review.html.erb
+++ b/app/views/contributions/review.html.erb
@@ -16,7 +16,7 @@
       <td><%= hidden_field_tag "contribution_ids[]", contribution.id %></td>
       <td><%=h contribution.loan.title %></td>
       <td><%=h number_to_currency contribution.loan.amount.to_i/100 %></td>
-      <td><%= number_field_tag 'amounts[]', contribution.amount.to_i/100 %></td>
+      <td><%= number_to_currency(contribution.amount.to_i/100) %></td>
     </tr>
     <% end %>
     <tr>
