--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<% if current_user %>
-						<li><%= link_to "My Contributions", contributions_path %></li>
+						<li><%= link_to "My Profile", contributions_path %></li>
 					<% end %>
 				</ul>
 	      <ul class="nav navbar-nav navbar-right">
