all category made and shows every loan

--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -14,18 +14,24 @@
     <% end %>
   </ul>
     <% @categories.each_with_index do |category, i| %>
-          <% if category.name == "Newest" %>
-            <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
-              <div class="loans transitions-enabled">
-                <%= render partial: 'loan_box', collection: @newest_loans_by_category[category.name], as: :loan %>
-              </div>
-            </div>
-          <% else %>
-            <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
-              <div class="loans transitions-enabled">
-                <%= render partial: 'loan_box', collection: @loans_by_category[category.name], as: :loan %>
-              </div>
-            </div>
-          <% end %>
+      <% if category.name == "Newest" %>
+        <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
+          <div class="loans transitions-enabled">
+            <%= render partial: 'loan_box', collection: @newest_loans_by_category[category.name], as: :loan %>
+          </div>
+        </div>
+      <% elsif category.name == "All" %>
+        <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
+          <div class="loans transitions-enabled">
+            <%= render partial: 'loan_box', collection: @loans, as: :loan %>
+          </div>
+        </div>
+      <% else %>
+        <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
+          <div class="loans transitions-enabled">
+            <%= render partial: 'loan_box', collection: @loans_by_category[category.name], as: :loan %>
+          </div>
+        </div>
+      <% end %>
     <% end %>
 </div>
