--- a/app/views/layouts/_borrower_navbar.html.erb
+++ b/app/views/layouts/_borrower_navbar.html.erb
@@ -16,7 +16,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li><%= link_to "My Loans", borrower_loans_path %></li>
+	        <li><%= link_to "My Dashboard", borrower_path %></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
 	        <% if current_user %>
