made borrower dashboard prettier

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -288,3 +288,10 @@ a.add-loan-text:hover {
 .btn-checkout {
   display: none;
 }
+
+.dashboard{
+  text-align: center;
+}
+.page-header{
+  padding-bottom: 0px;
+}
