min and sug monthly payment javascript on new loan page

--- a/app/views/borrower/loans/new.html.erb
+++ b/app/views/borrower/loans/new.html.erb
@@ -24,7 +24,7 @@
     <%= f.collection_select :categories, Category.all, :id, :name, include_blank: true  %><br/>
 
     <%= f.label       :amount %><br/>
-    <%= f.text_field  :amount %><br/>
+    <%= f.text_field  :amount, id: "amount"  %><br/>
 
     <%= f.label       :requested_by %><br/>
     <%= f.date_field  :requested_by %><br/>
@@ -34,6 +34,8 @@
 
     <%= f.label       :monthly_payment %><br/>
     <%= f.text_field  :monthly_payment %><br/>
+    <span id="minimum-monthly-payment"></span></br>
+    <span id="suggested-monthly-payment"></span></br>
 
     <%= f.label       :image %><br/>
     <%= f.file_field  :image %><br/>
@@ -42,4 +44,23 @@
       <%= link_to 'Cancel', borrower_loans_path, :class => 'btn btn-danger' %>
     </div>
   <% end %>
+  <script src="http://code.jquery.com/jquery-1.5.js"></script>
+    <script>
+      $(document).ready(function(){
+        var amountBox    = $('#amount') // Textarea input box
+        var totalAmount  = $('#amount').value; //Total characters allowed in textarea
+        var MinAmountBox    = $('#minimum-monthly-payment'); // Remaining chars count will be displayed here
+        var SugAmountBox    = $('#suggested-monthly-payment'); // Remaining chars count will be displayed here
+
+        amountBox.keyup(function() { //user releases a key on the keyboard
+
+            var thisAmount = this.value; //get chars count in textarea
+
+            var value = thisAmount * .16;
+            var min = thisAmount * .08;
+            SugAmountBox.text('Suggested Monthly Payment: $' + value); //count remaining chars
+            MinAmountBox.text('Minimum Monthly Payment: $' + min); //count remaining chars
+        });
+    });
+  </script>
 </div>
