--- a/app/views/layouts/_borrower_navbar.html.erb
+++ b/app/views/layouts/_borrower_navbar.html.erb
@@ -9,7 +9,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a id="mini-keevahh-logo" class="navbar-brand" href="/borrower"><img src="/assets/kevah.png" class="brand" height="40px" width="40px" /></a>
+	      <a id="mini-keevahh-logo" class="navbar-brand" href="/borrower"><img src="https://s3.amazonaws.com/Keevaah_seed_photos/seed/kevah.png" class="brand" height="40px" width="40px" /></a>
 	      <a class="navbar-brand brand-text" href="/">Keevahh</a>
 	    </div>
 
