--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -23,7 +23,7 @@
 				 <li class="active">
             <%= link_to cart_path do %>
               <span class="glyphicon glyphicon-shopping-cart"></span>
-              View Contributions <span class="badge"><%= cart.contributions.count %></span>
+              My Cart <span class="badge"><%= cart.contributions.count %></span>
             <% end %>
 	        </li>
 	        <% if current_user %>
