font changed to Helvetica

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,5 +1,5 @@
 // FONTS //
-$font-family-sans-serif: 'Aclonica', sans-serif;
+$font-family-sans-serif: 'Helvetica', sans-serif;
 
 // FLASH MSG //
 div.flash.success { border: 2px solid green; color: green;}
