--- a/app/views/loans/_loan_box.erb
+++ b/app/views/loans/_loan_box.erb
@@ -4,9 +4,9 @@
 <% else %>
 <div class="loan-box col-md-3">
 <% end %>
-  <div class="loan-box-description">
+  <div class="loan-box-insides">
     <%= image_tag loan.image.url(:small), class: "loan-image" %><br/>
-    <div>
+    <div class="loan-box-text">
       <div class="loan-title">
           <%= link_to loan do %>
           <strong><%= truncate(loan.title, :length => 20) %></strong>
@@ -18,20 +18,22 @@
     </div>
 
 
-    <div class="loan-box-price">
+    <div class="loan-box-footer">
       <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%=loan.progress%>%;"><%=loan.progress%>%</div>
       </div>
-      <div class="days_left">This loan expires in <%= (loan.requested_by - Date.today).to_i %> days</div>
-      <div class="remaining"><%= number_to_currency(loan.pending/100) %> Remaining</div>
-      <div class="add-loan">
-        <%= form_for(:cart, url: cart_path, method: :put) do |f| %>
-          <%= f.hidden_field :loan_id, value: loan.id %>
-          <%= f.hidden_field :quantity, value: 1 %>
-          <%= button_tag type: 'submit', class: 'btn btn-primary btn-add-loan' do %>
-            <span class='glyphicon glyphicon glyphicon-globe'></span> Loan Now
+      <div class="row">
+        <div class="days_left col-sm-4"><strong>Expires in:</strong></br><%= (loan.requested_by - Date.today).to_i %> days</div>
+        <div class="remaining col-sm-3"><strong>Remaining:</strong></br><%= number_to_currency(loan.pending/100) %></div>
+        <div class="add-loan col-sm-5">
+          <%= form_for(:cart, url: cart_path, method: :put) do |f| %>
+            <%= f.hidden_field :loan_id, value: loan.id %>
+            <%= f.hidden_field :quantity, value: 1 %>
+            <%= button_tag type: 'submit', class: 'btn btn-success btn-add-loan btn-sm' do %>
+              <span class='glyphicon glyphicon glyphicon-globe'></span> Loan Now
+            <% end %>
           <% end %>
-        <% end %>
+        </div>
       </div>
     </div>
   </div>
