--- a/app/views/borrower/loans/new.html.erb
+++ b/app/views/borrower/loans/new.html.erb
@@ -1,6 +1,6 @@
 <div class="page-border">
   <div class="page-header">
-    <h1>New loan</h1>
+    <h1>Make a New Loan Request Below</h1>
   </div>
   <% if @loan.errors.any? %>
     <div id="error-explanation">
@@ -14,33 +14,36 @@
     </div>
   <% end %>
   <%= form_for @loan, url: borrower_loans_path, method: :post do |f| %>
-    <%= f.label       :title %><br/>
-    <%= f.text_field  :title %><br/>
+    <%= f.label       :title, 'Loan Title' %><br/>
+    <%= f.text_field  :title %><br/><br/>
 
-    <%= f.label       :description %><br/>
-    <%= f.text_field  :description %><br/>
+    <%= f.label       :description, 'Tell Us What You Need' %><br/>
+    <%= f.text_area   :description,
+                      placeholder: "In three or fewer paragraphs tell us how this loan will change your life.",
+                      cols: 48,
+                      rows: 6 %><br/><br/>
 
-    <%= f.label             :loan_category %><br/>
-    <%= f.collection_select :categories, Category.first(6), :id, :name, include_blank: true  %><br/>
+    <%= f.label             :loan_category, 'Pick a Category' %><br/>
+    <%= f.collection_select :categories, Category.first(6), :id, :name, include_blank: true  %><br/><br/>
 
-    <%= f.label       :amount %><br/>
-    <%= f.text_field  :amount %><br/>
+    <%= f.label       :amount, 'How Much Do You Need?' %><br/>
+    <%= f.text_field  :amount %><br/><br/>
 
-    <%= f.label       :requested_by %><br/>
-    <%= f.date_field  :requested_by %><br/>
+    <%= f.label       :requested_by, 'When Do You Need It?' %><br/>
+    <%= f.date_field  :requested_by %><br/><br/>
 
-    <%= f.label       :repayments_begin %><br/>
-    <%= f.date_field  :repayments_begin %><br/>
+    <%= f.label       :repayments_begin, 'When Can You Start Repaying It?' %><br/>
+    <%= f.date_field  :repayments_begin %><br/><br/>
 
-    <%= f.label       :monthly_payment %><br/>
+    <%= f.label       :monthly_payment, 'How Much Can You Repay Per Month?' %><br/>
     <%= f.text_field  :monthly_payment %><br/>
     <span id="minimum-monthly-payment"></span></br>
     <span id="suggested-monthly-payment"></span></br>
 
-    <%= f.label       :image %><br/>
+    <%= f.label       :image, "Upload A Picture Of Yourself" %><br/>
     <%= f.file_field  :image %><br/>
     <div class="form-actions">
-      <%= f.submit "Create loan", class: "btn btn-primary" %>
+      <%= f.submit "Submit", class: "btn btn-primary" %>
       <%= link_to 'Cancel', borrower_loans_path, :class => 'btn btn-danger' %>
     </div>
   <% end %>
