--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -10,8 +10,8 @@
 
 $font-family-sans-serif: 'Helvetica', sans-serif;
 
-// div.flash.success { border: 2px solid green; color: green;}
-// div.flash.error   { border: 2px solid red; 	 color: red;}
+div.flash.success { border: 2px solid green; color: green;}
+div.flash.error   { border: 2px solid red; 	 color: red;}
 //
 // BODY //
 body {
@@ -20,6 +20,99 @@ body {
 }
 
 $body-bg: white;
+
+// BODY //
+
+.tab-panel {
+  display: none;
+}
+
+.tab-panel.active {
+  display: block;
+}
+
+.category-tabs{
+  border: 1px solid rgba(218, 217, 222, 1);
+  border-radius: 4px 4px 0px 0px;
+}
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus{
+  background-color: #5cb85c;
+  border: 1px solid transparent;
+}
+
+.nav-tabs > li > a {
+  margin-right: 0px;
+}
+
+////////////////////// LOAN BOXES///////////////////////////////
+.loans {
+  margin: 0 auto;
+}
+
+.loan-box {
+  background: transparent;
+  padding-top: 15px;
+}
+
+
+a{
+  color: #828587
+}
+
+.loan-box:hover{
+  a{
+    color:  #5cb85c;
+    text-decoration: none;
+  }
+}
+
+.loan-box-insides {
+  background: transparent;
+  border: 1px solid rgba(218, 217, 222, 1);
+  border-radius: 6px;
+}
+
+.loan-box-text{
+  padding: 10px;
+}
+
+.loan-image {
+  width: 100%;
+  height: 33%;
+  border: 1px 0.5px 0.5px 1px solid rgba(218, 217, 222, 0);
+  border-radius: 6px 6px 0px 0px;
+}
+
+.loan-title {
+  text-align: center;
+  font-size: 14px;
+}
+//
+.loan-description {
+  margin-left: 3%;
+  margin-bottom: 20px;
+  font-size: 12px;
+}
+
+
+.loan-box-footer{
+  padding: 10px;
+  font-size: 10px;
+}
+
+.progress{
+  height: 15px;
+  border-radius: 25px;
+  margin-bottom: 10px;
+}
+
+.progress-bar{
+  font-size: 10px;
+  line-height: 15px;
+  background: #5cb85c;
+}
+////////////////////// LOAN BOXES///////////////////////////////
+
 
 
 // // NAVBAR //
@@ -122,79 +215,6 @@ $body-bg: white;
 //   box-shadow: 10px 10px 5px #888;
 // }
 //
-.tab-panel {
-  display: none;
-}
-.tab-panel.active {
-  display: block;
-}
-
-.loans {
-  margin: 0 auto;
-}
-
-.loan-box {
-  background: transparent;
-  padding-top: 15px;
-}
-
-
-a{
-  color: #828587
-}
-
-.loan-box:hover{
-  a{
-    color:  #5cb85c;
-    text-decoration: none;  
-  }
-}
-
-.loan-box-insides {
-  background: transparent;
-  border: 1px solid rgba(218, 217, 222, 1);
-  border-radius: 6px;
-}
-
-.loan-box-text{
-  padding: 10px;
-}
-
-.loan-image {
-  width: 100%;
-  height: 33%;
-  border: 1px solid rgba(218, 217, 222, 0);
-  border-radius: 6px;
-}
-
-.loan-title {
-  text-align: center;
-  font-size: 14px;
-}
-//
-.loan-description {
-  margin-left: 3%;
-  margin-bottom: 20px;
-  font-size: 12px;
-}
-
-
-.loan-box-footer{
-  padding: 10px;
-  font-size: 10px;
-}
-
-.progress{
-  height: 15px;
-  border-radius: 25px;
-  margin-bottom: 10px;
-}
-
-.progress-bar{
-  font-size: 10px;
-  line-height: 15px;
-  background: #5cb85c;
-}
 
 
 //
