--- a/app/views/borrower/loans/dashboard.html.erb
+++ b/app/views/borrower/loans/dashboard.html.erb
@@ -1,29 +1,27 @@
 <div class="page-border">
   <h1 class="col-md-12 dashboard"><%= current_user.first_name %> <%= current_user.last_name %> Dashboard</h1>
 
-  <div class="page-header">
-    <div class= "col-md-6 dashboard" id="make-a-loan">
-      <%= link_to 'Apply For A New Loan', new_borrower_loan_path, :class => 'btn btn-primary' %>
-    </div></br>
+  <% if current_user.loans == 0 %>
+    <h3>Loans</h3>
 
-    <div class = "col-md-6 dashboard">
-      <%= link_to "Edit My Profile", edit_user_path(current_user), :class => 'btn btn-primary' %><br/><br/>
-    </div>
-  </div>
-
-  <h3>Loans</h3>
-  <ul class="nav nav-tabs" role="tablist">
+    <ul class="nav nav-tabs" role="tablist">
+      <% @loan_states.each_with_index do |state, i| %>
+        <li class="<%= i==0 ? 'active' : '' %>">
+          <a class="tab-control" href="#tab-<%=i + 1 %>"><%= state.capitalize %></a>
+        </li>
+      <% end %>
+    </ul>
     <% @loan_states.each_with_index do |state, i| %>
-      <li class="<%= i==0 ? 'active' : '' %>">
-        <a class="tab-control" href="#tab-<%=i + 1 %>"><%= state.capitalize %></a>
-      </li>
-    <% end %>
-  </ul>
-  <% @loan_states.each_with_index do |state, i| %>
-      <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
-        <div class="loans transitions-enabled">
-          <%= render partial: 'loans_table', collection: @loans_by_state[state], as: :loan %>
+        <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
+          <div class="loans transitions-enabled">
+            <%= render partial: 'loans_table', collection: @loans_by_state[state], as: :loan %>
+          </div>
         </div>
-      </div>
+    <% end %>
+  <% else %>
+  <br><br><br><br>
+  <h3>You currently have no loans if you would like some money please click below</h3>
+     <br><br>
+    <%= link_to 'Apply For A New Loan', new_borrower_loan_path, :class => 'btn btn-primary' %>
   <% end %>
 </div>
