--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -56,3 +56,34 @@
     <% end %>
   </table>
 </div>
+
+<div class="col-md-12">
+  <ul class="nav nav-tabs" role="tablist">
+    <% @categories.each_with_index do |category, i| %>
+      <li class="category-tabs<%= i==0 ? ' active' : '' %>">
+        <a class="tab-control" href="#tab-<%=i + 1 %>"><%= category.name%></a>
+      </li>
+    <% end %>
+  </ul>
+    <% @categories.each_with_index do |category, i| %>
+      <% if category.name == "Newest" %>
+        <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
+          <div class="loans transitions-enabled">
+            <%= render partial: 'loan_box', collection: @newest_loans_by_category[category.name], as: :loan %>
+          </div>
+        </div>
+      <% elsif category.name == "All" %>
+        <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
+          <div class="loans transitions-enabled">
+            <%= render partial: 'loan_box', collection: @loans, as: :loan %>
+          </div>
+        </div>
+      <% else %>
+        <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
+          <div class="loans transitions-enabled">
+            <%= render partial: 'loan_box', collection: @loans_by_category[category.name], as: :loan %>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+</div>
